# SnakeHichipTF

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
snakehichiptf/: _version.py  cli.py
snakehichiptf/data/example_data/: samplesheet_SubstantiaNigra_vs_MiddleFrontalGyrus.tsv
snakehichiptf/docs/: Diffhichip.md  Genomesetup.md  Snakehichip.md  TFscprinter.md  TFtobias.md
snakehichiptf/organisms/: all_motifs.txt  basic.txt
snakehichiptf/rules/: Diffhichip.Snakefile  Genomesetup.Snakefile  Snakehichip.Snakefile  TFscprinter.Snakefile  TFtobias.Snakefile
snakehichiptf/rules/envs/: basic.yaml  bulk_scprinter_gpu.yaml  cooler.yaml  deeptools.yaml  diffloop.yaml  fithichip.yaml  genomefeature.yaml  hicdc.yaml  hicexplorer.yaml  hichipper.yaml  hicpro.yaml  maps.yaml  mapsrun.yaml  r.yaml  samtools.yaml  scprinter_gpu.yaml  tobias.yaml
snakehichiptf/scripts/: MAPS.py  MAPS_peak_formatting.r  MAPS_regression_and_peak_caller.r  chr2_scprinter_main.py  consensus_interactions.py  feather_filter_all.py  feather_filter_chr.py  feather_filter_chr_hicpro.py  feather_split_all.py  feather_split_rongxin.py  hicdc_differential_interactions.R  hicdc_genomefeature.R  hicdc_significant_interactions.R  hichipper.diffloop_differential_analysis.R  hichipper.diffloop_work.R  make_maps_runfile.py  overlaps_gr1.tsv  overlaps_gr2.tsv  plot_footprints_scprinter_standalone.py  qcReport_make.Rmd  qc_all.R  qc_hichip_barplot.R  qc_hichip_quantiles.py  qc_plot_quantiles.R  restriction_cut_multipleenzyme.py  scprinter_main.py  singlecell_scprinter_main.py
snakehichiptf/scripts/fithichip/: CombineNearbyInteraction.py  Distance_vs_CC.r  FitHiC_SigInt.r  InteractionHicPro.r
snakehichiptf/ui/: launch.py  stl_app.py
snakehichiptf/workflows/: Diffhichip.py  Genomesetup.py  Snakehichip.py  TFscprinter.py  TFtobias.py  __init__.py
(+4 files in other folders)
