[build-system]
requires = ["setuptools>=72.1.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "SnakeHichipTF"
version = "0.1.4"
description = "A Snakemake pipeline for integrating HiChIP differential interaction analysis and TF binding analysis."
readme = "README.md"
license = { file = "LICENSE.md" }
authors = [
    { name = "Yidan Sun", email = "syidan@wustl.edu" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Operating System :: POSIX",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "snakemake>=8.28.0",
]
requires-python = ">=3.8"


[project.scripts]
Genomesetup = "snakehichiptf.workflows.Genomesetup:main"
Snakehichip = "snakehichiptf.workflows.Snakehichip:main"
Diffhichip = "snakehichiptf.workflows.Diffhichip:main"
TFtobias = "snakehichiptf.workflows.TFtobias:main"
TFscprinter = "snakehichiptf.workflows.TFscprinter:main"
snakehichiptf = "snakehichiptf.cli:main"
snakehichiptf-ui = "snakehichiptf.ui.launch:main"


[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["snakehichiptf", "snakehichiptf.*"]

[tool.setuptools.package-data]
# Data files associated with the workflows package
snakehichiptf = [
    "scripts/*",
    "scripts/fithichip/*",
    "scripts/hicpro-3.1.0/*",
    "scripts/hicpro-3.1.0/bin/*",
    "scripts/hicpro-3.1.0/bin/utils/*",
    "scripts/hicpro-3.1.0/scripts/*",
    "rules/*.Snakefile",
    "rules/envs/*.yaml",
    "organisms/*",
    "ui/*.py",
]


[project.urls]
homepage = "https://github.com/YidanSunResearchLab/snakehichiptf"
repository = "https://github.com/YidanSunResearchLab/snakehichiptf"
issues = "https://github.com/YidanSunResearchLab/snakehichiptf/issues"

